// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceHeader should add the "squashed"-class when the sidebar is opened 1`] = `
<div class="space-header oc-p-m oc-flex space-header-squashed">
  <div class="space-header-image">
    <div class="space-header-image-default oc-flex oc-flex-middle oc-flex-center">
      <span class="oc-icon oc-icon-xxl oc-icon-passive oc-px-m oc-py-m">
        <!---->
      </span>
    </div>
  </div>
  <div class="space-header-infos">
    <div class="oc-flex oc-mb-s oc-flex-middle oc-flex-between">
      <div class="oc-flex oc-flex-middle space-header-infos-heading">
        <h1 class="space-header-name"></h1>
        <button aria-label="Show context menu" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-ml-s" id="space-context-btn" type="button">
          <!-- @slot Content of the button -->
          <span class="oc-icon oc-icon-m oc-icon-passive">
            <!---->
          </span>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded" id="space-context-drop" options="[object Object]">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-s">
            <div>
              <div id="oc-files-context-menu">
                <ul class="oc-list oc-my-rm oc-mx-rm oc-files-context-actions oc-pb-s oc-files-context-actions-border" id="oc-files-context-actions-members">
                  <li class="context-menu oc-files-context-action oc-px-s oc-rounded oc-menu-item-hover">
                    <button class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-actions-show-details-trigger action-menu-item" type="button">
                      <!-- @slot Content of the button -->
                      <span class="oc-icon oc-icon-m oc-icon-passive">
                        <!---->
                      </span>
                      <span class="oc-files-context-action-label">Members</span>
                      <!--v-if-->
                      <!--v-if-->
                    </button>
                  </li>
                </ul>
                <ul class="oc-list oc-my-rm oc-mx-rm oc-files-context-actions oc-pt-s" id="oc-files-context-actions-trashBin">
                  <li class="context-menu oc-files-context-action oc-px-s oc-rounded oc-menu-item-hover">
                    <button class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-actions-delete-trigger action-menu-item" type="button">
                      <!-- @slot Content of the button -->
                      <span class="oc-icon oc-icon-m oc-icon-passive">
                        <!---->
                      </span>
                      <span class="oc-files-context-action-label">Deleted files</span>
                      <!--v-if-->
                      <!--v-if-->
                    </button>
                  </li>
                </ul>
              </div>
              <!--v-if-->
              <!--v-if-->
              <input accept="image/*" id="space-image-upload-input" multiple="" name="file" tabindex="-1" type="file">
            </div>
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div>
      <!-- eslint-disable vue/no-v-html -->
      <div class="markdown-container"></div> <!-- eslint-enable -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`SpaceHeader space image should show the default image if no other image is set 1`] = `
<div class="space-header oc-p-m oc-flex">
  <div class="space-header-image">
    <div class="space-header-image-default oc-flex oc-flex-middle oc-flex-center">
      <span class="oc-icon oc-icon-xxl oc-icon-passive oc-px-m oc-py-m">
        <!---->
      </span>
    </div>
  </div>
  <div class="space-header-infos">
    <div class="oc-flex oc-mb-s oc-flex-middle oc-flex-between">
      <div class="oc-flex oc-flex-middle space-header-infos-heading">
        <h1 class="space-header-name"></h1>
        <button aria-label="Show context menu" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-ml-s" id="space-context-btn" type="button">
          <!-- @slot Content of the button -->
          <span class="oc-icon oc-icon-m oc-icon-passive">
            <!---->
          </span>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded" id="space-context-drop" options="[object Object]">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-s">
            <div>
              <div id="oc-files-context-menu">
                <ul class="oc-list oc-my-rm oc-mx-rm oc-files-context-actions oc-pb-s oc-files-context-actions-border" id="oc-files-context-actions-members">
                  <li class="context-menu oc-files-context-action oc-px-s oc-rounded oc-menu-item-hover">
                    <button class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-actions-show-details-trigger action-menu-item" type="button">
                      <!-- @slot Content of the button -->
                      <span class="oc-icon oc-icon-m oc-icon-passive">
                        <!---->
                      </span>
                      <span class="oc-files-context-action-label">Members</span>
                      <!--v-if-->
                      <!--v-if-->
                    </button>
                  </li>
                </ul>
                <ul class="oc-list oc-my-rm oc-mx-rm oc-files-context-actions oc-pt-s" id="oc-files-context-actions-trashBin">
                  <li class="context-menu oc-files-context-action oc-px-s oc-rounded oc-menu-item-hover">
                    <button class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-actions-delete-trigger action-menu-item" type="button">
                      <!-- @slot Content of the button -->
                      <span class="oc-icon oc-icon-m oc-icon-passive">
                        <!---->
                      </span>
                      <span class="oc-files-context-action-label">Deleted files</span>
                      <!--v-if-->
                      <!--v-if-->
                    </button>
                  </li>
                </ul>
              </div>
              <!--v-if-->
              <!--v-if-->
              <input accept="image/*" id="space-image-upload-input" multiple="" name="file" tabindex="-1" type="file">
            </div>
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div>
      <!-- eslint-disable vue/no-v-html -->
      <div class="markdown-container"></div> <!-- eslint-enable -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`SpaceHeader space image should show the set image 1`] = `
<div class="space-header oc-p-m oc-flex">
  <div class="space-header-image">
    <img alt="" class="oc-cursor-pointer">
  </div>
  <div class="space-header-infos">
    <div class="oc-flex oc-mb-s oc-flex-middle oc-flex-between">
      <div class="oc-flex oc-flex-middle space-header-infos-heading">
        <h1 class="space-header-name"></h1>
        <button aria-label="Show context menu" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-ml-s" id="space-context-btn" type="button">
          <!-- @slot Content of the button -->
          <span class="oc-icon oc-icon-m oc-icon-passive">
            <!---->
          </span>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded" id="space-context-drop" options="[object Object]">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-s">
            <div>
              <div id="oc-files-context-menu">
                <ul class="oc-list oc-my-rm oc-mx-rm oc-files-context-actions oc-pb-s oc-files-context-actions-border" id="oc-files-context-actions-members">
                  <li class="context-menu oc-files-context-action oc-px-s oc-rounded oc-menu-item-hover">
                    <button class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-actions-show-details-trigger action-menu-item" type="button">
                      <!-- @slot Content of the button -->
                      <span class="oc-icon oc-icon-m oc-icon-passive">
                        <!---->
                      </span>
                      <span class="oc-files-context-action-label">Members</span>
                      <!--v-if-->
                      <!--v-if-->
                    </button>
                  </li>
                </ul>
                <ul class="oc-list oc-my-rm oc-mx-rm oc-files-context-actions oc-pt-s" id="oc-files-context-actions-trashBin">
                  <li class="context-menu oc-files-context-action oc-px-s oc-rounded oc-menu-item-hover">
                    <button class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-files-actions-delete-trigger action-menu-item" type="button">
                      <!-- @slot Content of the button -->
                      <span class="oc-icon oc-icon-m oc-icon-passive">
                        <!---->
                      </span>
                      <span class="oc-files-context-action-label">Deleted files</span>
                      <!--v-if-->
                      <!--v-if-->
                    </button>
                  </li>
                </ul>
              </div>
              <!--v-if-->
              <!--v-if-->
              <input accept="image/*" id="space-image-upload-input" multiple="" name="file" tabindex="-1" type="file">
            </div>
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <div>
      <!-- eslint-disable vue/no-v-html -->
      <div class="markdown-container"></div> <!-- eslint-enable -->
      <!--v-if-->
    </div>
  </div>
</div>
`;
